# nav_ws

./: .gitignore  calibrate_camera.py  calibration_20.pickle  debug_ekf.txt  frames.gv  go.bash  system_diagram
InertialLabs_INS-D #F2001917/: F2001917_clb_04.prm  F2001917_clb_05.prm
InertialLabs_INS-D #F2001917/Software/INS_GUI_20210428/configs/: default.prm  gnss_reader_skin.qss  language.qm  license.plf  plugins.lng  skin.qss
src/apriltag/cfg/: tags_Standard52h13.yaml
src/apriltag/src/: AprilTagNode.cpp
src/barcode_localizer/: package.xml  setup.cfg  setup.py
src/barcode_localizer/barcode_localizer/: apriltag_localizer.py
src/basler_camera/: package.xml  setup.cfg  setup.py
src/basler_camera/basler_camera/: apriltag_detector.py  basler_camera.py
src/basler_camera/launch/: detector.launch.py
src/basler_lib/: package.xml  setup.cfg  setup.py
src/basler_lib/basler_lib/: __init__.py  calibrate.py  camera.py  detector.py
src/debugging_pkg/: package.xml  setup.cfg  setup.py
src/debugging_pkg/debugging_pkg/: apriltag_visualizer.py
src/inertiallabs_ins/: CMakeLists.txt  ReadMe.md  package.xml
src/inertiallabs_ins/src/: il_ins copy.cpp.bak  il_ins.cpp
src/inertiallabs_interfaces/: CMakeLists.txt  package.xml
src/learning_tf2_py/: setup.py
src/learning_tf2_py/install/: local_setup.sh  setup.sh
src/learning_tf2_py/install/learning_tf2_py/share/learning_tf2_py/: package.sh  package.xml
src/learning_tf2_py/log/: latest_build
src/master_pkg/: package.xml  setup.py
src/master_pkg/cfg/: rviz_config.rviz
src/master_pkg/description/: master.urdf
src/master_pkg/launch/: master.launch.py
src/master_pkg/params/: ekf.yaml
src/navigation_messages/: CMakeLists.txt  package.xml
src/navigation_messages/msg/: ImageBundle.msg  ZsrMsg.msg
src/pylon-ros-camera/pylon_ros2_camera_wrapper/launch/: pylon_ros2_camera.launch.py
src/pylon-ros-camera/pylon_ros2_camera_wrapper/src/: pylon_ros2_camera_wrapper.cpp
src/strawberry_bot_description/: CMakeLists.txt  package.xml
src/strawberry_bot_description/src/description/: strawberry_bot_description.urdf
src/summer_bot/: package.xml  setup.cfg  setup.py
src/summer_bot/launch/: master.launch.py
src/summer_bot/summer_bot/: InertialLabsIMUCaching.py  apriltag_visuals.py
src/tag_interfaces/: CMakeLists.txt  package.xml
src/tag_interfaces/srv/: QueryTagPose.srv
src/tag_server/: package.xml  setup.cfg  setup.py
src/tag_server/tag_server/: tag_service.py
